--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ header label {
     display: none;
 }
 
+/*Tablet størrelse*/
 @media(max-width:991px){
 
     header {
@@ -142,5 +143,9 @@ header label {
     #menu-bar:checked ~ .navbar {
         display: block;
     }
+}
 
+/* telefonstørrelse */
+@media (max-width: 480px){
+    
 }
