--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 .logo{
     width: 50%;
     height: auto;
+    justify-content: center;
 }
 
 body {
@@ -31,6 +32,10 @@ body {
     background-size: cover;
     background-position: center;
     background-color: var(--Beige);
+}
+
+background img{
+    opacity: 20%;
 }
 
 header {
@@ -50,6 +55,7 @@ header {
 
 header .navbar ul {
     list-style: none;
+    display: block;
 }
 
 header .navbar ul li {
@@ -145,9 +151,47 @@ header label {
     #menu-bar:checked ~ .navbar {
         display: block;
     }
+
+    .logo{
+        width: 90%;
+        height: auto;
+    }
+
+    .some{
+        color: var(--Rød);
+        display: flex;
+        padding: 2%;
+        font-size: 4vh;
+        justify-content: end;
+    }
 }
 
 /* telefonstørrelse */
 @media (max-width: 480px){
+.logo{
+    width: 85%;
+    height: auto;
+    padding-top: 40%;
+}
 
+.some{
+    color: var(--Rød);
+    display: flex;
+    padding: 2%;
+    font-size: 3vh;
+    justify-content: end;
+}
+}
+
+/*Sørger for at footeren bliver i fotteren*/
+main{
+    min-height: 95vh;
+}
+
+.some{
+    color: var(--Rød);
+    display: flex;
+    padding: 2%;
+    font-size: 5vh;
+    justify-content: end;
 }
