--- a/css/kontaktinformationer.css
+++ b/css/kontaktinformationer.css
@@ -28,7 +28,7 @@ body {
     font-family: Helvetica, sans-serif;
     text-decoration: none;
     min-height: 100vh;
-    background: url('../images/forside.png');
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../images/forside.png');
     background-size: cover;
     background-position: center;
     background-color: var(--Beige);
@@ -120,6 +120,28 @@ h1{
 h2{
     display: flex;
     justify-content: center;
+}
+
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+}
+
+.kort_billede{
+    width: 30%;
+    height: auto;
+    animation: spin 10s linear infinite;
+}
+
+@keyframes spin{
+    from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
 }
 
 /*Tablet størrelse*/
