--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,26 @@
     justify-content: center;
 }
 
+/*Gennemsigtig baggrund*/
+/*ChaGPT: "Kan jeg gøre baggrundsbilledet gennemsigtigt?" https://chatgpt.com/share/6756eeed-cec0-8009-94c3-72717e26b2d3*/
 body {
     font-family: Helvetica, sans-serif;
     text-decoration: none;
     min-height: 100vh;
-    background: url('../images/forside.png');
-    background-size: cover;
-    background-position: center;
+    position: relative;
     background-color: var(--Beige);
+}
+
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../images/forside.png') center / cover no-repeat;
+    opacity: 0.2; /* Juster gennemsigtigheden */
+    z-index: -1;
 }
 
 
@@ -166,9 +178,9 @@ header label {
 /* telefonstørrelse */
 @media (max-width: 480px){
 .logo{
-    width: 85%;
+    width: 100%;
     height: auto;
-    padding-top: 40%;
+    padding-top: 30px;
 }
 
 .some{
@@ -178,6 +190,7 @@ header label {
     font-size: 3vh;
     justify-content: end;
 }
+
 }
 
 /*Sørger for at footeren bliver i fotteren*/
@@ -189,4 +202,5 @@ main{
     color: var(--Rød);
     display: flex;
     font-size: 5vh;
+    justify-content: flex-end;
 }
