--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,14 @@ header label {
     padding-top: 30px;
 }
 
+header label {
+    display: flex;
+    float: right;
+    font-size: 5vh;
+    margin-top: -10%;
+    margin-left: -10%;
+}
+
 .some{
     color: var(--Rød);
     display: flex;
@@ -203,4 +211,5 @@ main{
     display: flex;
     font-size: 5vh;
     justify-content: flex-end;
+    padding-bottom: 2%;
 }
