--- a/css/kontaktinformationer.css
+++ b/css/kontaktinformationer.css
@@ -18,8 +18,9 @@
     display: flex;
     justify-content: space-between;
 }
+
 .logo{
-    width: 20%;
+    width: 40%;
     height: auto;
     justify-content: center;
 }
@@ -133,6 +134,7 @@ h1{
 h2{
     display: flex;
     justify-content: center;
+    padding-top: 10%;
 }
 
 .box{
@@ -144,10 +146,9 @@ h2{
 }
 
 /*ChatGPT: "Kan man ved hjælp af css få et billede til at dreje rundt?" https://chatgpt.com/share/6756e84c-f544-8009-a8e4-9c41f9e76259*/
-.billeder{
+.billeder_container{
     justify-content: center;
     display: flex;
-    
     position: relative;
     width: 500px;
     height: auto;
@@ -260,6 +261,14 @@ h2{
     width: 50%;
     height: auto;
     padding-top: 100px;
+}
+
+header label{
+    display: flex;
+    float: right;
+    font-size: 5vh;
+    margin-top: -10%;
+    margin-left: -10%;
 }
 
 .some{
