--- a/css/anmeldelser.css
+++ b/css/anmeldelser.css
@@ -49,7 +49,6 @@ body::before {
     z-index: -1;
 }
 
-
 header {
     position: fixed;
     top:0;
@@ -63,7 +62,6 @@ header {
     z-index: 1000;
     text-transform: uppercase;
 }
-
 
 header .navbar ul {
     list-style: none;
@@ -122,30 +120,41 @@ header label {
     display: none;
 }
 
+h1{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 6vh;
+    padding-top: 5%;
+}
+
+p{
+    font-size: 2vh;
+    font-weight: 400;
+    padding-top: 5%;
+}
+
 .section1 {
     position: relative;
     text-align: center;
     color: var(--Grøn);
 }
 
-
-h1{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.billede1{
+    width: 100%;
+    height: auto;
+    padding-top: 10%;
+    opacity: 0.25;
 }
 
-p{
+.tekst1{
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
 /*Tablet størrelse*/
 @media(max-width:991px){
-
     header {
         padding: 20px;
     }
@@ -192,7 +201,28 @@ p{
         width: 30%;
         height: auto;
     }
+
+    h1{
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 3vh;
+        padding-top: 5%;
+    }
+    
+    p{
+        font-size: 2vh;
+        font-weight: 400;
+        padding-top: 5%;
+    }
+
+    .billede1{
+    width: 100%;
+    height: auto;
+    padding-top: 30%;
+    }
+
 }
+
 
 /* telefonstørrelse */
 @media (max-width: 480px){
