--- a/css/anmeldelser.css
+++ b/css/anmeldelser.css
@@ -62,7 +62,7 @@ header {
     z-index: 1000;
     text-transform: uppercase;
 }
-
+/*
 header .navbar ul {
     list-style: none;
     display: block;
@@ -111,6 +111,84 @@ header .navbar ul li:hover > ul {
 
 #menu-bar {
     display: none;
+}
+*/
+
+#menu-bar {
+    display: none;
+}
+
+header label {
+    font-size: 10vh;
+    color: var(--Rød);
+    cursor: pointer;
+    display: none;
+}
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.dropbtn {
+    background-color: var(--Beige);
+    color: var(--Rød);
+    padding: 16px;
+    font-size: 2rem;
+    font-family: Helvetica, sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    text-align: right;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: var(--Beige);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: var(--Rød);
+    padding: 12px 16px;
+    font-size: 2rem;
+    font-family: Helvetica, sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    color: var(--Gul);
+}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    color: var(--Gul);
+  }
+
+  #menu-bar {
+    display: none;
+}
+
+.menu-icon {
+    display: none;
+    cursor: pointer;
 }
 
 header label {
