--- a/css/arrangementer.css
+++ b/css/arrangementer.css
@@ -20,7 +20,7 @@
 }
 
 .logo{
-    width: 20%;
+    width: 30%;
     height: auto;
     justify-content: center;
     z-index: -1;
@@ -63,58 +63,6 @@ header {
     z-index: 1000;
     text-transform: uppercase;
 }
-
-/*
-header .navbar ul {
-    list-style: none;
-    display: block;
-}
-
-header .navbar ul li {
-    position: relative;
-    float: right;
-}
-
-
-header .navbar ul li a {
-    text-decoration: none;
-    font-size: 20px;
-    padding: 18px;
-    color: var(--Rød);
-    display: block;
-    font-weight: 600;
-    background-color: var(--Beige);
-}
-
-header .navbar ul li a:hover {
-    color: var(--Gul);
-}
-
-header .navbar ul li ul {
-    position: absolute;
-    left: 0;
-    width: 200px;
-    display: none;
-}
-
-header .navbar ul li ul li {
-    width: 100%;
-}
-
-header .navbar ul li ul li ul {
-    left: 200px;
-    top:0;
-}
-
-header .navbar ul li:focus-within > ul,
-header .navbar ul li:hover > ul {
-    display: block;
-}
-
-#menu-bar {
-    display: none;
-}
-    */
 
     #menu-bar {
         display: none;
@@ -203,7 +151,7 @@ header label {
 .koncert1{
     display: flex;
     justify-content: space-between;
-    margin-top: 15%;
+    margin-top: 20%;
     margin-left: 10%;
     
 }
@@ -347,8 +295,8 @@ h1{
         display: flex;
         float: right;
         font-size: 5vh;
-        margin-top: -2%;
-        margin-left: -10%;
+        margin-top: 2%;
+        margin-right: 10%;
     }
     
     .menu-icon {
@@ -386,10 +334,11 @@ h1{
     .koncert1{
         display: block;
         text-align: center;
+        width: 100%;
     }
     
-    .fakenameband_billede{
-        width: 40%;
+    .allen{
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -408,8 +357,8 @@ h1{
         text-align: center;
     }
     
-    .sceneband{
-        width: 40%;
+    .gorgeous{
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -428,8 +377,8 @@ h1{
         text-align: center;
     }
     
-    .tremandband{
-        width: 40%;
+    .anna{
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -440,7 +389,6 @@ h1{
         font-family: Helvetica, sans-serif;
         font-weight: 600;
         text-align: center;
-        padding-right: 10%;
     }
 
     .koncert4{
@@ -449,7 +397,7 @@ h1{
     }
     
     .andreasodbjerg_billede{
-        width: 40%;
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -468,8 +416,8 @@ h1{
         text-align: center;
     }
     
-    .blaamand_billede{
-        width: 40%;
+    .ungskab{
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -489,7 +437,7 @@ h1{
     }
     
     .blaest_billede{
-        width: 40%;
+        width: 50%;
         height: auto;
         align-items: center;
         margin-bottom: 5%;
@@ -519,7 +467,7 @@ h1{
         float: right;
         font-size: 5vh;
         margin-top: 10%;
-        margin-left: -10%;
+        margin-right: 10%;
     }
 }
 
